--- a/CSS/style.css
+++ b/CSS/style.css
@@ -48,7 +48,9 @@ header{
 .containerr{
 	padding: 20px;
 	margin: 10px;
+	/*
 	height: 800px;
+	*/
 }
 /*Five K display part*/
 .fiveK{
@@ -267,6 +269,23 @@ header{
 	display: flex;
 	margin-left: 130px;
 }
+
+.text-statistic{
+	margin: 15px;
+	padding: 10px;
+}
+
+.detail-statistic{
+	margin: 15px;
+}
+
+.detail-statistic ul li{
+	margin-left: 20px;
+}
+
+.quote3{
+	font-size: 1.3rem;
+}
 /*
 	CSS for footer
 */
@@ -284,6 +303,32 @@ header{
 .social-icon{
 	flex: 20%;
 	margin: 10px;
+	padding: 10px;
+	font-size: 30px;
+}
+
+.social-icon i:hover{
+	border: none;
+	border-radius: 5px;
+	background-color: blue;
+	color: #fff;
+}
+
+.info-contain{
+	display: grid;
+	grid-template-columns: 33.3% 33.3% 33.3%;
+}
+
+.info-link{
+	margin-top: 25px;
+}
+
+.info-link a{
+	text-decoration: none;
+}
+
+.info-link a:hover{
+	border-bottom: 1px solid #fff;
 }
 
 .related-link{
@@ -317,20 +362,20 @@ header{
 	responsive for the small screen devices
 */
 @media screen and (max-width: 460px){
-	*{
+*{
 		padding: 0;
 		margin: 0;
 		box-sizing: border-box;
 	}
-	.containerr{
-		padding: 30px;
-		margin-top: 100px;
+.containerr{
+		padding: 50px;
+		margin-top: 130px;
 		margin-left: -20px;
 		color: #4d4a46;
-		width: 740px;
+		width: 700px;	
 	}
 
-	.fiveK{
+.fiveK{
 	border: 2px solid #323ea8;
 	width: 250px;
 	padding: 10px;
@@ -338,7 +383,7 @@ header{
 	background-color: #aaf2f1;
 	}
 
-	.box{
+.box{
 	margin-left: 300px;
 	width: 50%;
 	padding: 20px;
@@ -348,63 +393,95 @@ header{
 	background-color: #aaf2f1;
 	}
 
-	.addMenu{
+.addMenu{
 	margin-top: -50px;
 	margin-bottom: 70px;
 	width: 100%;
 	}
 
-	.intro{
+.intro{
 	margin: 10px;
 	padding: 10px;
 	width: 700px;
 	}
 
-	.intro-title{
-	font-size: 32px;
-	font-weight: 600;
-	}
-
-	.intro-content{
+.intro-content{
 		display: grid;
 		grid-template-columns: 50% 50%;
 	}
 
-	.intro-content-founder{
+.intro-content-founder{
 		width: 700px;
-	}
-
-	.founder-content button:hover{
-	border: none;
 	}	
 
-	.founder-content button a:hover{
-	background-color: #0d466b;
-	color: #fff;
-	}
-
-	.founder-img img{
-	width: 70%;
-	display: block;
-	border-radius: 20px 20px 0 0;
-	}
-
-	.founder-info p{
+.founder-info p{
 	display: none;
 	}
+/*Responsvive chart part*/
+.statistic{
+	margin: 10px;
+	padding: 10px;
+	width: 700px;
+}
+
+.statistic-container{
+	display: block;
+}
+
+.chart-display{
+	width: 300px;
+	height: 300px;
+	margin: 0 auto;
+}
+
+.chart-title{
+	padding: 10px;
+	display: flex;
+	margin-left: 130px;
+}
+/*Respnsive foooter*/
+.footer{
+	padding: 10px;
+	margin: 10px;
+	height: auto;
+	background-color: #a0a0a0;
+	width: 700px;
+}
+
+.footer-table{
+	display: flex;
+}
+
+.social-icon{
+	flex: 20%;
+	margin: 10px;
+}
+
+.related-link{
+	flex: 50%;
+	margin: 10px;
+	display: grid;
+	grid-template-columns: 70% 30%;
+}
+
+.something-else{
+	flex: 30%;
+	margin: 10px;
+}
+
 }
 /*
 	Responsive for the big screen devices
 */
 @media screen and (min-width: 460px) and (max-width:1024px){
-	.containerr{
-		padding: 30px;
-		margin: 20px;
+.containerr{
+		padding: 70px;
+		margin: 10px;
 		color: #4d4a46;
 		width: 980px;
 	}
 
-	.fiveK{
+.fiveK{
 	border: 2px solid #323ea8;
 	width: 200px;
 	padding: 10px;
@@ -413,7 +490,7 @@ header{
 	background-color: #aaf2f1;
 	}
 
-	.box{
+.box{
 	padding: 10px;
 	margin-left: 100px;
 	width: 40%;
@@ -422,9 +499,79 @@ header{
 	background-color: #aaf2f1;
 	}
 
-	.addMenu{
+.addMenu{
 	margin-top: -50px;
 	margin-bottom: 70px;
 	width: 100%;
 	}
+
+	.intro{
+	margin: 10px;
+	padding: 10px;
+	width: 1000px;
+	}
+
+.intro-content{
+		display: grid;
+		grid-template-columns: 50% 50%;
+	}
+	
+.intro-content-founder{
+	display: flex;
+}
+
+.founder-info p{
+	display: none;
+	}
+/*Responsvive chart part*/
+.statistic{
+	margin: 10px;
+	padding: 10px;
+	width: 1000px;
+}
+
+.statistic-container{
+	display: block;
+}
+
+.chart-display{
+	width: 300px;
+	height: 300px;
+	margin: 0 auto;
+}
+
+.chart-title{
+	padding: 10px;
+	display: flex;
+	margin-left: 130px;
+}
+/*Respnsive foooter*/
+.footer{
+	padding: 10px;
+	margin: 10px;
+	height: auto;
+	background-color: #a0a0a0;
+	width: 1000px;
+}
+
+.footer-table{
+	display: flex;
+}
+
+.social-icon{
+	flex: 20%;
+	margin: 10px;
+}
+
+.related-link{
+	flex: 50%;
+	margin: 10px;
+	display: grid;
+	grid-template-columns: 70% 30%;
+}
+
+.something-else{
+	flex: 30%;
+	margin: 10px;
+}
 }
