--- a/CSS/style.css
+++ b/CSS/style.css
@@ -309,9 +309,11 @@ header{
 
 .social-icon i:hover{
 	border: none;
+	padding: 10px;
 	border-radius: 5px;
 	background-color: blue;
 	color: #fff;
+	cursor: pointer;
 }
 
 .info-contain{
@@ -335,7 +337,7 @@ header{
 	flex: 30%;
 	margin: 10px;
 	display: grid;
-	grid-template-columns: 50% 50%;
+	grid-template-columns: 45% 50%;
 }
 
 .related-link a{
