--- a/CSS/styleInfo.css
+++ b/CSS/styleInfo.css
@@ -5,6 +5,10 @@
 	font-family: Tahoma, sans-serif;
 }
 
+p{
+	justify-content: center;
+}
+
 /*Navigation*/
 header{
 	margin-inline: 10px;
@@ -44,6 +48,7 @@ header{
 	padding: 10px;
 	border-radius: 5px;
 }
+
 
 /*Hot news*/
 
@@ -89,4 +94,51 @@ header{
 
 .hot-new-list{
 	flex: 20%;
+}
+
+.bucket{
+	margin: 10px;
+	padding: 10px;
+}
+
+.devide{
+	border-bottom: 2px dashed #1b2e5c;
+}
+
+.list-new{
+	padding: 10px;
+	margin: 10px;
+}
+
+.box-new{
+	display: flex;
+}
+
+.box-img img{
+	flex: 30%;
+	padding: 10px;
+	width: 100%;
+}
+
+.box-content{
+	flex: 70%;
+	margin: 10px;
+	padding: 10px;
+}
+
+.box-content a{
+	text-decoration: none;
+	color: #000;
+}
+
+.box-content a: hover{
+	cursor: pointer;
+}
+
+.footer{
+	height: 70px;
+	background-color: #58d5f5;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
