--- a/CSS/style.css
+++ b/CSS/style.css
@@ -294,7 +294,7 @@ header{
 	padding: 10px;
 	margin: 10px;
 	height: 200px;
-	background-color: #a0a0a0;
+	background-color: #58d5f5;
 }
 
 .footer-table{
