--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: Tahoma, sans-serif;
+	scroll-behavior: smooth;
 }
 
 /*Navigation*/
@@ -478,7 +479,10 @@ header{
 		padding: 0;
 		margin: 0;
 		box-sizing: border-box;
+		font-size: 24px;
 	}
+
+
 .containerr{
 		padding: 50px;
 		margin-top: 130px;
@@ -582,16 +586,16 @@ header{
 
 .add-info{
 	padding: 20px;
-	margin: 10px;
+	margin-bottom: 30px;
 	width: 700px;
 }
 
 .add-ske{
-	display: block;
+	display: inline-block;
 }
 
 .add-right-side{
-	margin-top: 70px;
+	margin-top: 400px;
 	padding: 10px;
 	border-left: 1px solid #000;
 }
@@ -666,6 +670,7 @@ header{
 .founder-info p{
 	display: none;
 }
+
 /*Responsvive chart part*/
 .statistic{
 	margin: 10px;
