--- a/CSS/style.css
+++ b/CSS/style.css
@@ -492,13 +492,16 @@ header{
 	}
 
 .fiveK{
+	font-size: 18px;
 	border: 2px solid #323ea8;
 	width: 250px;
 	padding: 10px;
 	box-shadow: 1px 1px 1px 1px #323ea8;
 	background-color: #aaf2f1;
 	}
-
+.fiveK ul li{
+	font-size: 24px;
+}
 .box{
 	margin-left: 300px;
 	width: 50%;
@@ -538,6 +541,7 @@ header{
 	margin: 10px;
 	padding: 10px;
 	width: 700px;
+	font-size: 18px;
 }
 
 .statistic-container{
